2011-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_text_background_color): fix

2011-06-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_isblank): new macro

2011-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_font_size): new function
	(avt_get_font_height, avt_get_font_width): removed

2011-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	on audio end push 'f' over 's', no matter how they are arranged

	* bdf2c, avtinternals.h, akfavatar.h, avatar.c (avt_drawchar):
	get_font_char(int) in main API, returns void*

	* akfavatar.h, avatar.c (avt_get_font_height, avt_get_font_width):
	new functions

2011-05-19  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-canvas.c: new file

2011-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c:
	don't show header files directly (use about-files)

	* akfavatar.h, avatar.c (avt_show_raw_image): new function
	(avt_show_gimp_image): adapted - marked deprecated

	* akfavatar.h, avatar.c (avt_get_background_color)
	(avt_image_max_width, avt_image_max_height): new functions

2011-05-15  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (avt.dirsep): new variable

2011-05-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (laudio_play, laudio_loop):
	store reference to audio, so it isn't garbage collected while playing
	(lavt_quit_audio, lavt_wait_audio_end, lavt_stop_audio):
	clear stored audio-reference

2011-05-05  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_long_menu):
	allow short menues, renamed to lavt_menu
	Lua function avt.menu as alias for avt.long_menu

2011-04-29  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_long_menu): support for stacked tables

2011-04-27  Andreas K. Foerster  <info@akfoerster.de>

	* audio1.xpm, lua/akfavatar/audio1.lua: new files

2011-04-26  Andreas K. Foerster  <info@akfoerster.de>
